--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,12 +17,37 @@ spring:
     baseline-version: ${FLYWAY_BASELINE_VERSION}
   cloud:
     gcp:
+      pubsub:
+        subscriber:
+          executor-threads: ${APP_PUBSUB_EXECUTOR_THREAD_NUM}
+          parallel-pull-count: ${APP_PUBSUB_PARALLEL_PULL_COUNT}
       credentials:
         location: ${CLOUD_GCP_CRED_PATH}
+
+gcp:
+  storage:
+    bucket-name: ${GCP_STORAGE_BUCKET_NAME}
+    presigned-url:
+      duration-minute: ${GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE}
 
 jwt:
   secret: ${JWT_SECRET}
   access-token:
-    expiration-ms: ${JWT_ACCESS_TOKEN_EXPIRATION_MS}
+    expiration-min: ${JWT_ACCESS_TOKEN_EXPIRATION_MIN}
   refresh-token:
-    expiration-ms: ${JWT_REFRESH_TOKEN_EXPIRATION_MS}
+    expiration-min: ${JWT_REFRESH_TOKEN_EXPIRATION_MIN}
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+  show-actuator: true
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+
+app:
+  subscription:
+    upload-image: ${APP_SUBSCRIPTION_UPLOAD_IMAGE}
