--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,7 +100,7 @@ jobs:
             --update-secrets="/etc/ssl/certs/client-cert.pem=db-client-cert:latest" \
             --update-secrets="/etc/ssl/certs/client-key.pem=db-client-key:latest" \
             --update-secrets="/etc/creds/cdc-image-service-api.json=gcp-cred:latest" \
-            --set-secrets="CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
+            --update-secrets="CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
             --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key.pem,JWT_ACCESS_TOKEN_EXPIRATION_MIN=30,JWT_REFRESH_TOKEN_EXPIRATION_MIN=10080,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json"
 
       - name: Get auth-service URL
@@ -146,7 +146,7 @@ jobs:
             --update-secrets="/etc/ssl/certs/client-cert.pem=db-client-cert:latest" \
             --update-secrets="/etc/ssl/certs/client-key.pem=db-client-key:latest" \
             --update-secrets="/etc/creds/cdc-image-service-api.json=gcp-cred:latest" \
-            --set-secrets="CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
+            --update-secrets="CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
             --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key.pem,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json,GCP_STORAGE_BUCKET_NAME=cdc-image-bucket,GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE=15"
 
       - name: Get image-service URL
@@ -192,7 +192,7 @@ jobs:
             --update-secrets="/etc/ssl/certs/client-cert.pem=db-client-cert:latest" \
             --update-secrets="/etc/ssl/certs/client-key.pem=db-client-key:latest" \
             --update-secrets="/etc/creds/cdc-image-service-api.json=gcp-cred:latest" \
-            --set-secrets="CDC_IMAGE_DB_URL=db-url:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
+            --update-secrets="CDC_IMAGE_DB_URL=db-url:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
             --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key.pem,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json,APP_SUBSCRIPTION_UPLOAD_IMAGE=projects/cdc-image-service/subscriptions/cdc-image-uploaded-image-subscription"
 
       - name: Get image-event-handler URL
