--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,12 +96,12 @@ jobs:
             --min-instances=0 \
             --max-instances=10 \
             --timeout=300 \
-            --update-secrets="/etc/ssl/certs/ca.pem=db-root-cert:latest" \
-            --update-secrets="/etc/ssl/certs/client-cert.pem=db-client-cert:latest" \
-            --update-secrets="/etc/ssl/certs/client-key.pem=db-client-key:latest" \
+            --update-secrets="/etc/ssl/certs/ca/ca.pem=db-root-cert:latest" \
+            --update-secrets="/etc/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest" \
+            --update-secrets="/etc/ssl/certs/client-key/client-key.pem=db-client-key:latest" \
             --update-secrets="/etc/creds/cdc-image-service-api.json=gcp-cred:latest" \
             --update-secrets="CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key.pem,JWT_ACCESS_TOKEN_EXPIRATION_MIN=30,JWT_REFRESH_TOKEN_EXPIRATION_MIN=10080,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json"
+            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key/client-key.pem,JWT_ACCESS_TOKEN_EXPIRATION_MIN=30,JWT_REFRESH_TOKEN_EXPIRATION_MIN=10080,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json"
 
       - name: Get auth-service URL
         id: auth-url
@@ -142,12 +142,12 @@ jobs:
             --min-instances=0 \
             --max-instances=20 \
             --timeout=300 \
-            --update-secrets="/etc/ssl/certs/ca.pem=db-root-cert:latest" \
-            --update-secrets="/etc/ssl/certs/client-cert.pem=db-client-cert:latest" \
-            --update-secrets="/etc/ssl/certs/client-key.pem=db-client-key:latest" \
+            --update-secrets="/etc/ssl/certs/ca/ca.pem=db-root-cert:latest" \
+            --update-secrets="/etc/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest" \
+            --update-secrets="/etc/ssl/certs/client-key/client-key.pem=db-client-key:latest" \
             --update-secrets="/etc/creds/cdc-image-service-api.json=gcp-cred:latest" \
             --update-secrets="CDC_IMAGE_DB_URL=db-url:latest,JWT_SECRET=jwt-secret:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key.pem,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json,GCP_STORAGE_BUCKET_NAME=cdc-image-bucket,GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE=15"
+            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key/client-key.pem,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json,GCP_STORAGE_BUCKET_NAME=cdc-image-bucket,GCP_STORAGE_PRESIGNED_URL_DURATION_MINUTE=15"
 
       - name: Get image-service URL
         id: image-url
@@ -188,12 +188,12 @@ jobs:
             --min-instances=0 \
             --max-instances=5 \
             --timeout=300 \
-            --update-secrets="/etc/ssl/certs/ca.pem=db-root-cert:latest" \
-            --update-secrets="/etc/ssl/certs/client-cert.pem=db-client-cert:latest" \
-            --update-secrets="/etc/ssl/certs/client-key.pem=db-client-key:latest" \
+            --update-secrets="/etc/ssl/certs/ca/ca.pem=db-root-cert:latest" \
+            --update-secrets="/etc/ssl/certs/client-cert/client-cert.pem=db-client-cert:latest" \
+            --update-secrets="/etc/ssl/certs/client-key/client-key.pem=db-client-key:latest" \
             --update-secrets="/etc/creds/cdc-image-service-api.json=gcp-cred:latest" \
             --update-secrets="CDC_IMAGE_DB_URL=db-url:latest,CDC_IMAGE_DB_USER=db-user:latest,CDC_IMAGE_DB_PASSWORD=db-password:latest" \
-            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key.pem,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json,APP_SUBSCRIPTION_UPLOAD_IMAGE=projects/cdc-image-service/subscriptions/cdc-image-uploaded-image-subscription"
+            --set-env-vars="CDC_IMAGE_DB_SSL_ROOT_CERT_PATH=/etc/ssl/certs/ca/ca.pem,CDC_IMAGE_DB_SSL_CLIENT_CERT_PATH=/etc/ssl/certs/client-cert/client-cert.pem,CDC_IMAGE_DB_SSL_CLIENT_KEY_PATH=/etc/ssl/certs/client-key/client-key.pem,CLOUD_GCP_CRED_PATH=/etc/creds/cdc-image-service-api.json,APP_SUBSCRIPTION_UPLOAD_IMAGE=projects/cdc-image-service/subscriptions/cdc-image-uploaded-image-subscription"
 
       - name: Get image-event-handler URL
         id: handler-url
