--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,6 +94,8 @@ jobs:
             --network=cdc-image-vpc-1 \
             --subnet=cloud-run-subnet \
             --vpc-egress=private-ranges-only \
+            --startup-probe-http-path=/actuator/health/readiness \
+            --liveness-probe-http-path=/actuator/health/liveness \
             --memory=1Gi \
             --cpu=1 \
             --min-instances=0 \
@@ -143,6 +145,8 @@ jobs:
             --network=cdc-image-vpc-1 \
             --subnet=cloud-run-subnet \
             --vpc-egress=private-ranges-only \
+            --startup-probe-http-path=/actuator/health/readiness \
+            --liveness-probe-http-path=/actuator/health/liveness \
             --memory=2Gi \
             --cpu=2 \
             --min-instances=0 \
@@ -192,6 +196,8 @@ jobs:
             --network=cdc-image-vpc-1 \
             --subnet=cloud-run-subnet \
             --vpc-egress=private-ranges-only \
+            --startup-probe-http-path=/actuator/health/readiness \
+            --liveness-probe-http-path=/actuator/health/liveness \
             --memory=1Gi \
             --cpu=1 \
             --min-instances=0 \
